fix spacing issues in footer bar

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -34,6 +34,8 @@ body {
 .footer {
 	position: fixed;
 	bottom: 0;
+	padding-top: 4px;
+	padding-bottom: 4px;
 	width: 100%
 }
 
